Add Boss E-Droid appreciation message and greeting

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Thank You!</h1>
+      <h1>Hello!</h1>
       <p>Thank you to everyone who checked up on me!</p>
       <div class="names">
         <strong>Special greetings to:</strong><br />
@@ -87,6 +87,12 @@
         @~Ozil JNR
       </div>
       <div class="love">I love you guys plenty!</div>
+      <div
+        class="love"
+        style="color: #6c63ff; font-size: 1.1rem; margin-top: 1.2rem"
+      >
+        Boss E-Droid cares and appreciates y'all! 🤖💙
+      </div>
     </div>
     <!-- Decorative background shapes -->
     <div
