Update names and thank you message

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
       <p>Thank you to everyone who checked up on me!</p>
       <div class="names">
         <strong>Special greetings to:</strong><br />
-        @~KING ZUBBY 001 🤴<br />
         @~candygrace<br />
-        @~Priceless😻🌹💫<br />
-        @~Ozil JNR
+        @Nwabeke Achalugo CCB<br />
+        @~CHIDIEBERE<br />
+        @~KING ZUBBY 001 🤴<br />
+        @formal onye odinaka<br />
       </div>
-      <div class="love">I love you guys plenty!</div>
+      <div class="love">Thank you guys for checking up on me!</div>
       <div
         class="love"
         style="color: #6c63ff; font-size: 1.1rem; margin-top: 1.2rem"
