Add @ozilfashion hub to special greetings

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         @~CHIDIEBERE<br />
         @~KING ZUBBY 001 🤴<br />
         @formal onye odinaka<br />
+        @ozilfashion hub<br />
       </div>
       <div class="love">Thank you guys for checking up on me!</div>
       <div
